--- a/开课吧AI面试训练/第二天.md
+++ b/开课吧AI面试训练/第二天.md
@@ -6,7 +6,7 @@
 
 线性回归是在数据里面找到拟合线最合理反映两者之间的关系，所以是基于两者或者多者之间具有**线性**关系的假设进行的。
 
-![image]([/image/逻辑回归.jpg](https://github.com/Laopeng2019/KaikebaAI-mianshixunlian/blob/master/%E5%BC%80%E8%AF%BE%E5%90%A7AI%E9%9D%A2%E8%AF%95%E8%AE%AD%E7%BB%83/image/%E9%80%BB%E8%BE%91%E5%9B%9E%E5%BD%92.jpg))
+![image]([(https://github.com/Laopeng2019/KaikebaAI-mianshixunlian/blob/master/%E5%BC%80%E8%AF%BE%E5%90%A7AI%E9%9D%A2%E8%AF%95%E8%AE%AD%E7%BB%83/image/%E9%80%BB%E8%BE%91%E5%9B%9E%E5%BD%92.jpg])
 
 逻辑回归是用来预测发生某种情况的概率有多大，以考试为例，在得到了原始数据的情况下，分两类：及格/不及格
 >因此线性回归用于预测的范围比较广，而逻辑回归预测范围为[0,1]
