--- a/开课吧AI面试训练/第五天.md
+++ b/开课吧AI面试训练/第五天.md
@@ -46,9 +46,15 @@ $$
 简单来说，就是用$X_i$到某个簇所有样本平均距离作为衡量该点到该簇的距离后，选择离$X_i$最近的一个簇作为最近簇。
 
 ## 5，kmeans算法的优缺点（各说三个） 
-
-
+Kmeans算法的优势在于简单易懂，便于实现，开发容易。
+缺点则是
+1. 寻找K的值需要依赖人工经验，没有自适应算法；
+2. 对离群点很敏感；
+3. 对初始质心很敏感。
 
 ## 6，请简述SVM 原理 
+SVM就是一种二分类模型，基本模型是定义在特征空间上的间隔最大的线性分类器，SVM的学习策略就是间隔最大化。
+
 
 ## 7，SVM 为什么采用间隔最大化 
+因为间隔越大，就表示分类效果越好，越有确信两个类之间分的越清楚
