第二天修改

--- a/开课吧AI面试训练/第二天.md
+++ b/开课吧AI面试训练/第二天.md
@@ -29,9 +29,13 @@ $$
 
 ### R平方
 $$
-    R^2 = 1-\cfrac{\text{SSE}}{\text{SST}} \\
+    R^2 = 1-\cfrac{\text{SSE}}{\text{SST}} 
 
-    \text{SST}=\sum_{i=1}^n(y_i-\overline{y} ) \\
+$$
+$$
+    \text{SST}=\sum_{i=1}^n(y_i-\overline{y} ) 
+$$
+$$
     \text{SSE} = \sum_{i=1}^m(f(x_i)-y_i)^2
 $$
 
