--- a/开课吧AI面试训练/第六天.md
+++ b/开课吧AI面试训练/第六天.md
@@ -61,16 +61,42 @@ $$
 
 ## 4，简述SVM硬间隔推导过程
 
+$$
+    \hat{\gamma}_i= y_i(w\cdot x_i+b)
+$$
 
+同样，这里定义最小的函数间隔为$\hat{\gamma}_i$:
+$$
+    \hat{\gamma}= \min_{i=1,...,N}\hat{\gamma}_i
+$$
 
 
 ## 5，简述SVM软间隔推导过程
 
 
+
+
 ## 6，简述决策树的构建过程
 
+- 节点的分裂：一般当一个节点所代表的属性无法给出判断时，则选择将这一节点分成2个子节点（二叉树以外的情况会分成n个子节点）
+- 阈值的确定：选择适当的阈值使得分类错误率最小
 
 ## 7，ID3决策树与C4.5决策树的区别
+### ID3: 
+由增熵(Entropy)原理来决定哪个做父节点，哪个节点需要分裂。对于一组数据来说，熵越小说明信息杂乱度越小，分类效果越好。熵定义如下：
+$$
+    \text{Entropy}=-\sum(P(x_i)*\log_2(P(x_i)))
+$$
+其中$P(x_i)$为$x_i$出现的概率。当Entropy最大为1的时候，是分类效果最差的状态，当它最小为0的时候，是完全分类的状态。因为熵等于0是理想状态，一般实际情况下，熵介于0到1之间。
 
+### C4.5:
+ID3分割太细了，训练数据的分类可以达到0错误率，但是因为新的数据核训练数据不同，所以面对新的数据分错率反倒上升了。决策树是通过分析训练数据，得到数据的统计信息，而不是专门训练数据量身定做的。C4.5中，优化项要除以分割太细的代价，这个比值叫信息增益率，显然分割太细的分母增加，信息增益率会降低。
 
+信息增益率：
+$$
+    \text{GainRatio}(D|A) = \cfrac{\text{infoGain}(D|A)}{\text{IV}(A)}
+$$
 
+$$
+    \text{IV}(A) = -\sum_{k=1}^{K}\cfrac{|D_k|}{|D|} * \log_2 \cfrac{|D_k|}{|D|}
+$$
